--- a/index.html
+++ b/index.html
@@ -151,11 +151,23 @@
                             Ciao sono l'user
                             <span class="_time-mess">12:30</span>
                         </div>
-                        
+
                     </div>
 
                     <!-- BottomBar -->
                     <div class="_bottom-bar">
+
+                        <div class="_emoji-wrapper">
+                            <i class="fa-regular fa-face-smile"></i>
+                        </div>
+
+                        <div class="_input-wrapper">
+                            <input type="text" class="_input-mess" placeholder="Scrivi un messaggio">
+                        </div>
+
+                        <div class="_vocal-wrapper">
+                            <i class="fa-solid fa-microphone-lines"></i>
+                        </div>
 
                     </div>
                 </div>
