--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                         <div v-for="(element, index) in contacts[globalIndex].messages" :class="contacts[globalIndex].messages[index].status == 'sent' ? 'server-mess' : 'user-mess'">
                             {{contacts[globalIndex].messages[index].message}}
-                            <span class="_time-mess">12:29</span>
+                            <span class="_time-mess">{{contacts[globalIndex].messages[index].date}}</span>
                         </div>
 
                     </div>
@@ -156,7 +156,7 @@
                         </div>
 
                         <div class="_input-wrapper">
-                            <input type="text" class="_input-mess" placeholder="Scrivi un messaggio">
+                            <input type="text" class="_input-mess" placeholder="Scrivi un messaggio" v-model="newMessageText" @keyup.enter="addMessage()">
                         </div>
 
                         <div class="_vocal-wrapper">
@@ -174,7 +174,7 @@
         </div>
 
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.3.0/build/global/luxon.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
