--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 
                             <div class="_text-container">
                                 <span class="_user-name">{{contacts[index].name}}</span>
-                                <span class="_info-date">Ultimo accesso {{contacts[index].messages[contacts[index].messages.length-1].date}}</span>
+                                <span class="_info-date">Ultimo accesso {{contacts[index].messages[contacts[index].messages.length-1].date.substr(0,9) + ' alle '+ contacts[index].messages[contacts[index].messages.length-1].date.substr(11,6)}}</span>
                             </div>
 
-                            <span class="_date-message">12:30</span>
+                            <span class="_date-message">{{getHour(index)}}</span>
                         </div>
 
                     </div>
@@ -122,7 +122,7 @@
 
                             <div class="_text-container">
                                 <span class="_user-name">{{contacts[globalIndex].name}}</span>
-                                <span class="_info-date">Ultimo accesso {{contacts[globalIndex].messages[contacts[globalIndex].messages.length-1].date}}</span>
+                                <span class="_info-date">Ultimo accesso {{contacts[globalIndex].messages[contacts[globalIndex].messages.length-1].date.substr(0,16)}}</span>
                             </div>
                         </div>
 
@@ -143,7 +143,7 @@
 
                         <div v-for="(element, index) in contacts[globalIndex].messages" :class="contacts[globalIndex].messages[index].status == 'sent' ? 'server-mess' : 'user-mess'">
                             {{contacts[globalIndex].messages[index].message}}
-                            <span class="_time-mess">{{contacts[globalIndex].messages[index].date}}</span>
+                            <span class="_time-mess">{{contacts[globalIndex].messages[index].date.substr(10,6)}}</span>
                         </div>
 
                     </div>
