--- a/index.html
+++ b/index.html
@@ -167,11 +167,12 @@
                         </div>
 
                         <div class="_input-wrapper">
-                            <input type="text" class="_input-mess" placeholder="Scrivi un messaggio" v-model="newMessageText" @keyup.enter="addMessage()">
+                            <input type="text" class="_input-mess" placeholder="Scrivi un messaggio" v-model="newMessageText" @keyup.enter="addMessage()" @focus="isWriteCheck()" @blur="stopCheck()">
                         </div>
 
                         <div class="_vocal-wrapper">
-                            <i class="fa-solid fa-microphone-lines"></i>
+                            <i class="fa-solid fa-paper-plane" v-if="isWrite" @click="addMessage()"></i>
+                            <i class="fa-solid fa-microphone-lines" v-if="isWrite==false"></i>
                         </div>
 
                     </div>
