--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
                             <i class="fa-solid fa-microphone-lines" v-if="isWrite==false"></i>
                         </div>
 
+                        
+
                     </div>
                 </div>
                 
@@ -219,6 +221,7 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/luxon@3.3.0/build/global/luxon.min.js"></script>
+    <script src="https://unpkg.com/vue-emoji-picker/dist/vue-emoji-picker.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
